<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Absolute Conquest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_string">Absolute Conquest - Proof of Concept Dynamic Real-Time Strategy Game</string>
    <string name="button_startgame">Start Game</string>
    <string name="button_changedifficulty">Change Difficulty</string>
    <string name="button_changemap">Change Map</string>
    <string name="button_switchprofile">Switch Profile</string>
    <string name="login_text">Enter your name or select from a saved profile below</string>
    <string name="name_exists">The player name you have entered is already in use. Please choose another name.</string>
    <string name="main_exit">Exit</string>
    <string name="title_activity_game_map">In Game Map</string>
    <string name="title_activity_difficulty_settings">Difficulty Settings</string>
    <string name="difficulty_settings_explanation">Select level of difficulty and AI battle strategy</string>
    <string name="difficulty_settings_difficulty">Difficulty</string>
    <string name="difficulty_settings_battlestrategy">AI Battle Strategy</string>
    <string name="difficulty_settings_easy">Easy</string>
    <string name="difficulty_settings_medium">Medium</string>
    <string name="difficulty_settings_hard">Hard</string>
    <string name="difficulty_settings_turtle">Defensive</string>
    <string name="difficulty_settings_balanced">Balanced</string>
    <string name="difficulty_settings_rush">Aggressive</string>
    <string name="difficulty_settings_random">Random</string>
    <string name="main_option_unitList">Unit List</string>
    <string name="main_option_settings">Settings</string>
    <string name="main_option_help">Help</string>
    <string name="main_option_about">About</string>
    <string name="title_activity_unit_list">Unit List</string>
    <string name="title_activity_about">About</string>
    <string name="about_title">Absolute Conquest</string>
    <string name="about_creator">Created by: Korie Seville</string>
    <string name="about_version">Installed version: 1.0 (POC)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_music">Music</string>
    <string name="title_activity_maps">Maps</string>
    <string name="maps_nomaps">No other maps exist yet :(</string>
    <string name="title_activity_help">Help</string>
    <string name="help_title">Help / FAQs</string>
    <string name="dialogfragment_startnewgame">Start New Game</string>
    <string name="dialogfragment_resumesavedgame">Resume Saved Game</string>
    <string name="help_content">\nHow To \n
        \n
		How to start a game\n
		- optionally select you difficulty\n
		- press start game\n
		\n	
		How to change difficulty\n
		- select change difficulty\n
		- select your desired difficulty or combat style\n
		- when the game is started, the difficulty you used will be selected.\n
		\n
		How to open the unit list\n
		- to see all units and buildings within the game and their stats, click the action bar and select Unit list\n
		- the class of object is separated into tabs (Units in one tab and Buildings in another)\n
		- exit the unit list by hitting the back button on the device\n
		\n
		How to turn the sound and music on or off\n
		- select the action bar and select settings\n
		- check a setting to turn it on and uncheck a setting to turn it off\n
		- exit the menu by selecting OK\n
		\n
		How to perform in-game actions\n
		- Move a unit: select the unit and select a desired empty space for the unit to move to.\n
		- Attack an enemy unit: select the unit you want to attack with, then select the unit you want to attack.\n
		- Build new units: select a construction center to display the buttons to build new units. Click the button that corresponds to the unit you want to build\n
		- Build new buildings. Select the main base to display the buttons to build new buildings. Click the button that corresponds to the building you want to build. Finally, select an empty space to place the new building.\n
		\n
		FAQs\n
		\n
		Can I save my in-progress game?\n
		- Yes. When you leave the game map screen, the game is automatically saved. When you hit start game again under your profile, you will be asked if you want to resume your game or start a new game.\n
		\n
		Other Notes\n
		\n
		Starting Game Values:\n
		- Resources: 20\n
		- Staring Units: 1 Scout\n
		- Starting Buildings: 1 Main Base, 1 Resource Generator, 1 Construction Center\n
</string>

</resources>